# qs-vibe-mg

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.bat  build.ps1  build.sh  dev.bat  dev.ps1  dev.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: 01-dev-environment.md  02-modules.md  03-requirements.md  README.md  history-tab-optimization-plan.md
docs/v0.0/: 01-plan.md
docs/v0.1/: 01-plan.md  02-frontend-refactor-plan.md  03-product-review.md  04-improvement-plan.md  06-symlink-management-redesign.md  07-manage-tab-interaction-optimization.md  08-multi-skill-sync-interaction.md  09-skill-list-expand-sync-refactor.md  10-performance-optimization.md  11-skill-tree-view-design.md  product-architecture-analysis.md
docs/v0.2/: 01-manage-experience-optimization.md  02-release-notes.md  03-agent-matrix-task-tracker.md  04-v0.2-task-audit.md  05-agent-source-optimization.md  06-project-source-registry.md  07-feature-backlog.md  08-source-provenance-technical-plan.md  13-code-index.md  (+11 more)
src/: App.vue  components.d.ts  i18n.ts  icons.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: agents.rs  config.rs  history.rs  logger.rs  mod.rs  skills.rs  sync.rs
src-tauri/src/models/: agent.rs  dashboard.rs  history.rs  mod.rs  origin.rs  skill.rs  sync.rs
src-tauri/src/parsers/: skill_md.rs
src-tauri/src/utils/: config.rs  datetime.rs  fs.rs  hash.rs  history.rs  mod.rs  origin.rs  path.rs
(+61 files in other folders)
